# imgpuller

./: .gitignore  LICENSE  README.md  pyproject.toml
src/imgpuller/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/imgpuller/download/: __init__.py  manager.py  state.py  worker.py
src/imgpuller/manifest/: __init__.py  resolver.py
src/imgpuller/oci/: __init__.py  docker_save.py  layout.py
src/imgpuller/registry/: __init__.py  auth.py  client.py
src/imgpuller/verification/: __init__.py  hasher.py
tests/: test_core.py  test_download.py
