[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imgpuller"
version = "0.2.0"
description = "Pull OCI/Docker images from registries via HTTP and save as a docker-archive .tar"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "imgpuller" }]
dependencies = [
    "aiohttp>=3.9,<4.0",
    "aiofiles>=23.0,<25.0",
    "click>=8.0,<9.0",
    "rich>=13.0,<14.0",
]

[project.scripts]
imgpuller = "imgpuller.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/imgpuller"]
